name: site
version: 0.0.0.1
synopsis: my site builder with Hakyll
license: BSD3
author: hiratara
maintainer: hiratara@cpan.org
category: Compilers/Interpreters
build-type: Simple
cabal-version: >=1.8
executable site
  main-is: site.hs
  build-depends: base >=4.5 && < 5
               , hakyll >= 4.0
