name: site
version: 0.0.0.1
build-type: Simple
synopsis: my site builder with Hakyll
license: BSD3
author: hiratara
maintainer: hiratara@cpan.org
category: Compilers/Interpreters
build-type: Simple
cabal-version: >=1.10
executable site
  main-is: site.hs
  build-depends: base >= 4
               , hakyll >= 4.7
               , pandoc >= 1.15
               , containers >= 0.5.6
  ghc-options: -threaded
  default-language: Haskell2010
